--- a/styles/reset.css
+++ b/styles/reset.css
@@ -19,8 +19,7 @@
    text-decoration: none !important;
 }
 
-body,
-html {
+body {
    font-family: "Karla", sans-serif;
    background-color: var(--bg-color);
    color: white;
