--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ header {
    background-color: var(--bg-color);
 
    position: sticky;
-   top: 0;
+   top: -1px;
 }
 
 header img {
@@ -86,6 +86,7 @@ header .nav-list a:hover button {
 .container {
    margin: 150px 110px 0;
    position: relative;
+   overflow-x: hidden;
 }
 
 .container .minha-area {
